# Game-of-Life

./: CMakeLists.txt  README.md  resultados.txt  resultadosOpenCL.txt  resultadosOpenCL2D.txt  resultadosOpenCL_multiples_32.txt  resultadosOpenCL_non_multiple_32.txt  resultados_cuda.txt  resultados_cuda_2d.txt  resultados_cuda_multiblock.txt  resultados_cuda_notmultiblock.txt
src/: main.cpp
src/CpuLife/: cpuLife.cpp  cpuLife.h
src/CudaLife/: cudaLife.cpp  cudaLife.cu  cudaLife.h
src/OpenclLife/: openClLife2d.cl  openclLife.cl  openclLife.cpp  openclLife.h
